# programming_assignment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
test/: test_input.txt  test_input2.txt  test_parser.py  test_stem.txt  test_stopwords.txt
word_parser/: parser.py
word_parser/cli/: cli.py
word_parser/utils/: porter_stemmer.py
