[tool.poetry]
name = "programming_assignment"
version = "0.1.0"
description = ""
authors = ["Nicholas Geil <nrgeil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
click = "^7.1.2"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
