[tool.poetry]
name = "word_parser"
version = "0.1.0"
description = ""
authors = ["Nicholas Geil <nrgeil@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "*"
pytest-cov = "^2.10.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse_file = 'word_parser.cli.cli:parse_file'
